--- a/css/styles.css
+++ b/css/styles.css
@@ -47,9 +47,9 @@ body {
 }
 
 .images {
+  display: block;
   max-width: 100%;
   height: auto;
-  display: block;
 }
 
 /* Text decoration for <a> */
@@ -105,8 +105,23 @@ body {
   list-style-type: none;
 }
 
-a.current {
+.nav-container .current {
   color: var(--accent-color);
+}
+
+.menu-item {
+  position: relative;
+}
+
+.menu-item .current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
 }
 
 .menu-link {
@@ -114,6 +129,11 @@ a.current {
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--title-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .menu-item:not(:last-child) {
@@ -123,6 +143,7 @@ a.current {
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
+  outline: none;
 }
 
 .menu-contacts {
@@ -145,21 +166,33 @@ a.current {
   padding-top: 32px;
   padding-bottom: 32px;
   color: currentColor;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .contacts-link:hover,
 .contacts-link:focus {
   color: var(--accent-color);
-}
-
-.contacts-link:hover .contacts-icon,
-.contacts-link:focus .contacts-icon {
-  fill: var(--accent-color);
+  outline: none;
 }
 
 .contacts-icon {
   margin-right: 10px;
   fill: var(--text-color);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
+}
+
+.contacts-link:hover .contacts-icon,
+.contacts-link:focus .contacts-icon {
+  fill: var(--accent-color);
+  outline: none;
 }
 
 /* ----------------------------------------------------------------------------- */
@@ -213,11 +246,17 @@ a.current {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--text-color-on-hover-bg);
   cursor: pointer;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--hero-btn-hover);
+  outline: none;
 }
 
 /* Features */
@@ -283,6 +322,28 @@ a.current {
   list-style-type: none;
 }
 
+.spec-fig {
+  display: flex;
+  position: relative;
+  margin: 0;
+}
+
+.label {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--text-color-on-hover-bg);
+  background: rgba(47, 48, 58, 0.8);
+}
+
 /* Our team */
 
 .team-title {
@@ -340,34 +401,43 @@ a.current {
   list-style: none;
 }
 
-.item-team-socials {
+.item-team-socials:not(:last-child) {
+  margin-right: 10px;
+}
+
+.team-socials-link {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
-.item-team-socials:not(:last-child) {
-  margin-right: 10px;
-}
-
-.item-team-socials:hover,
-.item-team-socials:hover .team-logo {
-  fill: var(--text-color-on-hover-bg);
+.team-socials-link:hover,
+.team-socials-link:focus {
   background-color: var(--accent-color);
-  cursor: pointer;
+  outline: none;
 }
 
-.team-socials-link {
-  display: block;
-  width: 20px;
-  height: 20px;
+.team-socials-link:hover .team-logo,
+.team-socials-link:focus .team-logo {
+  fill: var(--text-color-on-hover-bg);
+  outline: none;
 }
 
 .team-logo {
   fill: var(--socials-team-logo);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 /* Clients */
@@ -388,37 +458,44 @@ a.current {
   list-style: none;
 }
 
-.clients-item {
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-}
-
 .clients-item:not(:last-child) {
   margin-right: 30px;
 }
 
-.clients-item:hover,
-.clients-item:focus {
-  border: 1px solid var(--accent-color);
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.clients-item:hover .clients-logo,
-.clients-item:focus {
-  fill: var(--accent-color);
-}
-
-.clients-item {
+.clients-link {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+
+  transition-property: border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+  outline: none;
+}
+
+.clients-link:hover .clients-logo,
+.clients-link:focus .clients-logo {
+  fill: var(--accent-color);
+  outline: none;
 }
 
 .clients-logo {
   fill: var(--socials-team-logo);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 /* Footer */
@@ -434,6 +511,10 @@ a.current {
 
 .footer .logo {
   display: block;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
   margin-bottom: 20px;
 }
 
@@ -462,11 +543,17 @@ a.current {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .footer-contacts:hover,
 .footer-contacts:focus {
   color: var(--accent-color);
+  outline: none;
 }
 
 /* socials */
@@ -495,7 +582,11 @@ a.current {
   list-style: none;
 }
 
-.socials-item {
+.socials-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.socials-link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -503,21 +594,17 @@ a.current {
   height: 44px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
-.socials-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.socials-item:hover {
+.socials-link:hover,
+.socials-link:focus {
   background-color: var(--accent-color);
-  cursor: pointer;
-}
-
-.socials-link {
-  display: block;
-  width: 20px;
-  height: 20px;
+  outline: none;
 }
 
 .footer-socials-logo {
@@ -556,6 +643,11 @@ a.current {
   border-radius: 4px;
   border-style: none;
   cursor: pointer;
+
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .filter-button:focus,
@@ -564,7 +656,7 @@ a.current {
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+  outline: none;
 }
 
 /* Projects */
@@ -585,10 +677,14 @@ a.current {
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
+
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
-.projects-list > .item:hover,
-.projects-list > .item:focus {
+.projects-list > .item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
