--- a/css/styles.css
+++ b/css/styles.css
@@ -687,9 +687,31 @@ body {
 .projects-list > .item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  animation-name: overlay;
+  animation-duration: 250ms;
 }
 
-.card-text {
+.projects-fig {
+  position: relative;
+  margin: 0;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  color: var(--text-color-on-hover-bg);
+  background: rgba(33, 150, 243, 0.9);
+}
+
+.project .card-text {
+  display: block;
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
@@ -698,7 +720,7 @@ body {
 
 .project-name {
   margin-bottom: 4px;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 18px;
   line-height: 36px;
   letter-spacing: 0.06em;
@@ -709,4 +731,13 @@ body {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
+}
+
+/* Animation for projects list */
+
+@keyframes overlay {
+  0% {
+  }
+  100% {
+  }
 }
