--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ body {
   color: var(--text-color-on-hover-bg);
   cursor: pointer;
 
-  transition-property: background-color;
+  transition-property: background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
@@ -700,6 +700,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  padding: 63px 24px;
   width: 100%;
   height: 100%;
   font-size: 18px;
@@ -710,7 +711,7 @@ body {
   background: rgba(33, 150, 243, 0.9);
 }
 
-.project .card-text {
+.card-text {
   display: block;
   padding: 20px 24px;
   border-left: 1px solid #eeeeee;
@@ -740,4 +741,28 @@ body {
   }
   100% {
   }
+}
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  min-height: 581px;
+  background-color: red;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
