--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,6 @@ body {
   background-color: var(--accent-color);
   border-style: none;
   border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--text-color-on-hover-bg);
   cursor: pointer;
 
@@ -255,8 +254,62 @@ body {
 
 .hero-button:hover,
 .hero-button:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   background-color: var(--hero-btn-hover);
   outline: none;
+}
+
+/* Modal */
+
+.backdrop {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition-property: opacity, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  background-color: var(--text-color-on-hover-bg);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.close-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: var(--text-color-on-hover-bg);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+.icon-close {
+  fill: var(--logo-color);
 }
 
 /* Features */
@@ -687,28 +740,40 @@ body {
 .projects-list > .item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-  animation-name: overlay;
-  animation-duration: 250ms;
 }
 
 .projects-fig {
   position: relative;
   margin: 0;
+  overflow: hidden;
 }
 
 .overlay {
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
+  transform: translateY(100%);
   padding: 63px 24px;
   width: 100%;
   height: 100%;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-
   color: var(--text-color-on-hover-bg);
   background: rgba(33, 150, 243, 0.9);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item:hover .overlay {
+  transform: translateY(0);
+  /* animation-name: overlay;
+  animation-duration: 250ms;
+  animation-iteration-count: 1;
+  animation-direction: alternate;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation-delay: 0;
+  animation-fill-mode: forwards; */
 }
 
 .card-text {
@@ -736,33 +801,16 @@ body {
 
 /* Animation for projects list */
 
-@keyframes overlay {
+/* @keyframes overlay {
   0% {
+    height: 0;
   }
+
+  50% {
+    visibility: visible;
+  }
+
   100% {
+    height: 100%;
   }
-}
-
-.backdrop {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.modal {
-  position: absolute;
-  width: 528px;
-  min-height: 581px;
-  background-color: red;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-}
-
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
+} */
